--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.5.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "concurrently": "^6.0.1",
