--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -22,7 +24,7 @@
     "nodemailer": "^6.5.0"
   },
   "devDependencies": {
-    "concurrently": "^6.0.1",
+    "concurrently": "^6.0.2",
     "nodemon": "^2.0.7"
   }
 }
