--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.5.0"
+    "nodemailer": "^6.5.0",
+    "react-copy-to-clipboard": "^5.0.3"
   },
   "devDependencies": {
     "concurrently": "^6.0.2",
