--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
